--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="https://openreview.net/forum?id=_2SBqIkiDW"><b>I Spy a Metaphor: Large Language Models and Diffusion Models Co-Create Visual Metaphors</b></a>
+                  <a href="https://arxiv.org/pdf/2305.14724.pdf"><b>I Spy a Metaphor: Large Language Models and Diffusion Models Co-Create Visual Metaphors</b></a>
                 </div>
                 <div class="authors">
                     Tuhin Chakrabarty, Arkady Saakyan, Olivia Winn, Artemis Panagopoulou, <strong>Yue Yang</strong>, Marianna Apidianaki, Smaranda Muresan
@@ -80,7 +80,8 @@
                    <i>Findings of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2023
                 </div>
                 <div class="tags">
-                  <a href="https://openreview.net/forum?id=_2SBqIkiDW">link</a>
+                  <a href="https://arxiv.org/pdf/2305.14724">arxiv</a> /
+                  <a href="https://github.com/tuhinjubcse/VisualMetaphors">code</a>
                 </div>
                 <div align="justify">
                   TL;DR: We propose a method to generate visual metaphors from linguistic metaphors using a collaboration between Large Language Models (LLMs) and Diffusion Models. We use Instruct GPT-3 with Chain-of-Thought prompting to generate text that represents a visual elaboration of the linguistic metaphor, containing the implicit meaning and relevant objects, which is then used as input to the diffusion-based text-to-image models. We end up creating 6,476 visual metaphors and associated visual elaborations.
