update icons and recent preprints

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Yue Yang 杨樾</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <link rel="icon" href="images/icons/HoloDeckLogo.svg">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111341597-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -60,14 +61,38 @@
         <td>
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
-            <td width="65%" valign="middle">
+            <td width="70%" valign="middle">
               <name>Yue Yang</name><br>
               pronounced as <i>yoo-eh</i><br><br>
               220 South 33rd Street, Towne 299<br>Philadelphia, PA 19104, USA<br>
               Email: yueyang1 [at] seas.upenn.edu<br><br>
-              <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp; / &nbsp; <a href="https://github.com/YueYANG1996">GitHub</a> &nbsp; / &nbsp; <a href="https://www.linkedin.com/in/yue-yang-4b2075174">LinkedIn</a> &nbsp; / &nbsp; <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp; / &nbsp; <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp; / &nbsp; <a href="cv.pdf">CV</a>
+              <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">
+                <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
+              </a>
+              <a href="https://www.semanticscholar.org/author/Yue-Yang/2109409802">
+                <img src="images/icons/semantic-scholar.svg" alt="Semantic Scholar Icon">
+              </a>
+              <a href="https://github.com/YueYANG1996">
+                <img src="images/icons/github.svg" alt="GitHub Icon">
+              </a>
+              <a href="https://twitter.com/YueYangAI">
+                <img src="images/icons/twitter.svg" alt="Twitter Icon">
+              </a>
+              <a href="https://www.linkedin.com/in/yue-yang-4b2075174">
+                <img src="images/icons/linkedin.svg" alt="LinkedIn Icon">
+              </a>
+              <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">
+                <img src="images/icons/youtube.svg" alt="Youtube Icon">
+              </a>
+              <a href="https://www.pixiv.net/users/14283763">
+                <img src="images/icons/pixiv.svg" alt="Pixiv Icon">
+              </a>
+              <a href="cv.pdf">
+                <img src="images/icons/curriculum-vitae.svg" alt="CV">
+              </a>
             </td>
-            <td width="35%">
+
+            <td width="30%">
               <img src="images/cancun.png" width="100%">
             </td>
           </tr>
@@ -124,13 +149,65 @@
                 <heading>Recent Preprints</heading>
               </td>
             </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/holodeck_square.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/labo.pdf"><b><span class="small-caps">Holodeck</span>: Langauge Guided Generation of 3D Embodied AI Environments</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Fan-Yun Sun, Luca Weihs, Eli VanderBilt, Alvaro Herrasti, Winson Han, Jiajun Wu, Nick Haber, Ranjay Krishna, Lingjie Liu, Chris Callison-Burch, Mark Yatskar, Aniruddha Kembhavi, Christopher Clark
+                </div>
+                <!-- <div class="venue">
+                    arxiv, 2023
+                </div> -->
+                <div class="tags">
+                  Coming soon...
+                </div>
+                <div align="justify">
+                  TL;DR: <span class="small-caps">Holodeck</span> is an automated system for generating diverse 3D environments in Embodied AI, using a large language model (GPT-4) and a vast collection of 3D assets. It can create complex scenes based on user prompts, adjusting for styles and specific details, like "apartment for a researcher with a cat".
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/TBM_diagram.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/TBM.pdf"><b>Interpretable-by-Design Text Classification with Iteratively Generated Concept Bottleneck</b></a>
+                </div>
+                <div class="authors">
+                  Josh Magnus Ludan, Qing Lyu, Yue Yang, Liam Dugan, Mark Yatskar, Chris Callison-Burch
+                </div>
+                <div class="venue">
+                    arxiv, 2023
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2310.19660">arxiv</a> /
+                  <a href="https://github.com/JMRLudan/TBM">code</a>
+                </div>
+                <div align="justify">
+                  TL;DR: Text Bottleneck Models are proposed, an intrinsically interpretable text classification framework that offers both global and local explanations and can rival the performance of established black-box baselines such as GPT-4 fewshot and finetuned DeBERTa, while falling short againstfinetuned GPT3.5.
+                </div>
+              </td>
+            </tr>
           </table>
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" id="shortList">
             <!-- Your selected publications rows here -->
             <tr>
               <td width="30%" valign="middle">
-                <heading>Selected Publications</heading> <a href="javascript:void(0);" onclick="showFullList()">Full List of Publications</a>
+                <heading>Selected Publications</heading>
+              </td>
+              <td width="70%" valign="right">
+                <div align="right">
+                  <a href="javascript:void(0);" onclick="showFullList()">Full List of Publications</a>
+                </div>
               </td>
             </tr>
             
@@ -238,7 +315,13 @@
             <!-- Your full list of publications rows here -->
             <tr>
               <td width="30%" valign="middle">
-                <heading>Publications</heading> <br> <a href="javascript:void(0);" onclick="showShortList()">Selected Publications</a>
+                <heading>Publications</heading> <br>
+              </td>
+
+              <td width="70%" valign="right">
+                <div align="right">
+                  <a href="javascript:void(0);" onclick="showShortList()">Selected Publications</a>
+                </div>
               </td>
             </tr>
             <tr>
@@ -483,7 +566,7 @@
                     <i>Research Intern</i> (May. 2023 to Sept. 2023)
                   </td>
                   <td width="15%">
-                    <img src="images/ai2.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                    <img src="images/ai2.png" height=50px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
                 </tr>
                 <br>
@@ -493,24 +576,9 @@
                     <i>Research Scientist Intern</i> (May. 2022 to Sept. 2022)
                   </td>
                   <td width="15%">
-                    <img src="images/tencent-logo.webp" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                    <img src="images/tencent-logo.webp" height=50px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
                 </tr>
-                <!--
-                <tr>
-                  <td width="85%">
-                    <b>University of Pennsylvania & Coursera</b>, Philadelphia, PA, USA<br>
-                    <i>Associate Instructor</i> (Sept. 2020 to Sept. 2022)
-                  </td>
-                </tr>
-
-                 <tr>
-                  <td width="85%">
-                    <b>University of Pennsylvania</b>, Philadelphia, PA, USA<br>
-                    <i>Research Assistant</i> (May. 2020 to present)
-                  </td>
-                </tr>
-                -->
               </table>
             </td>
           </tr>
@@ -528,6 +596,16 @@
             </td>
           </tr>
           </table>
+
+          <!-- Academic Service -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+            <tr>
+              <td width="100%" valign="middle">
+                <heading>Academic Service</heading><br><br>
+                <strong>Reviewer</strong>: EMNLP 2022-2023, ACL 2023, EACL 2023-2024, CVPR 2024
+              </td>
+            </tr>
+            </table>
 
           <!-- Talks -->
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
