--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             <tr>
               <td width="100%" valign="middle">
                 <heading>Academic Service</heading><br><br>
-                <strong>Reviewer</strong>: EMNLP 2022-2023, ACL 2023, EACL 2023-2024, CVPR 2024
+                <strong>Reviewer</strong>: EMNLP 2022-2023, ACL 2023, EACL 2023-2024, CVPR 2024.
               </td>
             </tr>
             </table>
