update paper figures

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/TBM_diagram.png" width="100%">
+                <img src="images/TBM.png" width="100%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
