update figures for past papers

--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
                       <span><strong>Controllability & Creativity.</strong> Language interfaces in generative systems enables easier control over generation process. Leveraging the extensive world knowledge of LLMs, these systems can produce customized and diverse outputs. </span><br>
                   </div>
                 </div>
-
+                <br>
+                <p>
+                  <b style="color: #ac530f">I am looking for research intern opportunities in Summer 2024. Please reach out if you are interested in working with me!</b>
+                </p>
                 <!-- <img src="images/research_direction.png" width="80%"> -->
                 <!-- <p>
                   Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD) during undergrads.
@@ -182,7 +185,7 @@
                   <a href="papers/TBM.pdf"><b>Interpretable-by-Design Text Classification with Iteratively Generated Concept Bottleneck</b></a>
                 </div>
                 <div class="authors">
-                  Josh Magnus Ludan, Qing Lyu, Yue Yang, Liam Dugan, Mark Yatskar, Chris Callison-Burch
+                  Josh Magnus Ludan, Qing Lyu, <strong>Yue Yang</strong>, Liam Dugan, Mark Yatskar, Chris Callison-Burch
                 </div>
                 <div class="venue">
                     arxiv, 2023
@@ -326,7 +329,7 @@
             </tr>
             <tr>
               <td width="30%" style="text-align:center;">
-                <img src="images/metaphor.jpg" width="80%">
+                <img src="images/metaphor.png" width="100%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -343,7 +346,7 @@
                   <a href="https://github.com/tuhinjubcse/VisualMetaphors">code</a>
                 </div>
                 <div align="justify">
-                  TL;DR: We propose a method to generate visual metaphors from linguistic metaphors using a collaboration between Large Language Models (LLMs) and Diffusion Models. We use GPT-3 with Chain-of-Thought prompting to generate text that represents a visual elaboration of the linguistic metaphor, containing the implicit meaning and relevant objects, which is then used as input to the diffusion-based text-to-image models. We end up creating 6,476 visual metaphors and associated visual elaborations.
+                  TL;DR: We generate visual metaphors from linguistic metaphors using a collaboration between LLMs and Diffusion Models. We use GPT-3 with Chain-of-Thought prompting to generate text that represents a visual elaboration of the linguistic metaphor, which is then used as input to the diffusion-based text-to-image models. We end up creating 6,476 visual metaphors and associated visual elaborations.
                 </div>
               </td>
             </tr>
