update holodeck images

--- a/index.html
+++ b/index.html
@@ -155,7 +155,14 @@
 
             <tr>
               <td width="30%">
-                <img src="images/holodeck_square.png" width="100%">
+                <!-- <div class="caption">
+                  <center>
+                    a 1b1b apartment of a researcher who has a cat
+                  </center>  
+                </div> -->
+                <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 220px;">
+                  <source src="images/a_1b1b_apartment_of_a_researcher_who_has_a_cat_0_0_sunny_vondelpark_4k_1.0_100.0_360_16.0_30_10_CYCLES_video.mp4" type="video/mp4">
+                </video>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -171,7 +178,7 @@
                   Coming soon...
                 </div>
                 <div align="justify">
-                  TL;DR: <span class="small-caps">Holodeck</span> is an automated system for generating diverse 3D environments in Embodied AI, using a large language model (GPT-4) and a vast collection of 3D assets. It can create complex scenes based on user prompts, adjusting for styles and specific details, like "apartment for a researcher with a cat".
+                  TL;DR: <span class="small-caps">Holodeck</span> is an automated system for generating diverse 3D environments in Embodied AI, using a large language model (GPT-4) and a vast collection of 3D assets from Objaverse. It can create complex scenes based on user prompts, adjusting for styles and specific details, like "a 1b1b apartment of a researcher who has a cat".
                 </div>
               </td>
             </tr>
@@ -195,7 +202,7 @@
                   <a href="https://github.com/JMRLudan/TBM">code</a>
                 </div>
                 <div align="justify">
-                  TL;DR: Text Bottleneck Models are proposed, an intrinsically interpretable text classification framework that offers both global and local explanations and can rival the performance of established black-box baselines such as GPT-4 fewshot and finetuned DeBERTa, while falling short againstfinetuned GPT3.5.
+                  TL;DR: Text Bottleneck Model (TBM) is an inheretly interpretable text classification framework that offers both global and local explanations by iteratively constructing concept bottlenecks. TBM can rival the performance of established black-box baselines such as GPT-4 fewshot and finetuned DeBERTa.
                 </div>
               </td>
             </tr>
@@ -257,7 +264,7 @@
                   <a href="https://github.com/YueYANG1996/Z-LaVI">code</a>
                 </div>
                 <div align="justify">
-                  TL;DR: We develop a novel approach to endow language models with visual imagination capabilities. We leverage two complementary types of "imaginations": (I) recalling existing images through retrieval and (ii) synthesizing nonexistent images via text-to-image generation. Jointly exploiting the language inputs and the imagination, a pretrained vision-language model (e.g., CLIP) eventually composes a zero-shot solution to the original language tasks.
+                  TL;DR: We endow language models with visual imagination capabilities with two complementary methods: (I) recalling existing images through retrieval and (ii) synthesizing nonexistent images via text-to-image generation. Jointly exploiting the language inputs and the imagination, a pretrained vision-language model (e.g., CLIP) eventually composes a zero-shot solution to the originallanguage tasks.
                 </div>
               </td>
             </tr>
