change customizability videos to images

--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -106,14 +106,14 @@
             <span class="author-block"><sup>*</sup></span></sup>Equal Technical Contribution</span>
           </div>
 
-          <!-- <div class="is-size-5 emails">
+          <div class="is-size-5 emails">
             <span class="emails">
               <a href="mailto: yueyang1@seas.upenn.edu">yueyang1@seas.upenn.edu</a>&nbsp;&nbsp;
             </span>
             <span class="emails">
               <a href="mailto: fanyun@stanford.edu">fanyun@stanford.edu</a>
             </span>
-          </div> -->
+          </div>
 
           <!-- </div> -->
           <div class="column has-text-centered">
@@ -366,30 +366,25 @@
       <div>
               <div class="container" style="overflow:hidden;">
                   <div id="post_images" class="carousel">
-                      <div class="item-1">
-                        <div class="caption has-text-centered">Floor Plan Customizability</div>
-                        <video poster="" autoplay="" muted style="pointer-events: none;">
-                            <source src="./static/videos/floorplan_customizability.mp4" type="video/mp4">
-                        </video>
-                      </div>
-                      <div class="item-2">
-                        <div class="caption has-text-centered">Material Customizability</div>
-                        <video poster="" autoplay="" muted style="pointer-events: none;">
-                            <source src="./static/videos/material_customizability.mp4" type="video/mp4">
-                        </video>
-                      </div>
-                      <div class="item-3">
-                        <div class="caption has-text-centered">Object Customizability</div>
-                        <video poster="" autoplay="" muted style="pointer-events: none;">
-                            <source src="./static/videos/asset_customizability.mp4" type="video/mp4">
-                        </video>
-                      </div>
-                      <div class="item-4">
-                        <div class="caption has-text-centered">Door & Window Customizability</div>
-                        <video poster="" autoplay="" muted style="pointer-events: none;">
-                            <source src="./static/videos/door_window_customizability.mp4" type="video/mp4">
-                        </video>
-                      </div>
+                    <div class="item-1 image-caption-container">
+                      <div class="caption has-text-centered">Floor Plan Customizability</div>
+                      <img src="./static/images/floorplan_customizability.jpg" alt="Floor Plan Customizability">
+                    </div>
+
+                    <div class="item-1 image-caption-container">
+                      <div class="caption has-text-centered">Material Customizability</div>
+                      <img src="./static/images/material_customizability.jpg" alt="Material Customizability">
+                    </div>
+
+                    <div class="item-1 image-caption-container">
+                      <div class="caption has-text-centered">Object Customizability</div>
+                      <img src="./static/images/asset_customizability.jpg" alt="Object Customizability">
+                    </div>
+
+                    <div class="item-1 image-caption-container">
+                      <div class="caption has-text-centered">Door & Window Customizability</div>
+                      <img src="./static/images/door_winodw_customizability.jpg" alt="Door & Window Customizability">
+                    </div>
                   </div>
               </div>
           <!-- End Hero Carousel -->
@@ -458,7 +453,7 @@
           <p>
             <span class="small-caps">Holodeck</span> can aid embodied agents in adapting to new scene types and objects during object navigation tasks. <br>
           </p>
-          <img src="./static/images/objnav.png"/>
+          <img src="./static/images/objnav.jpg"/>
         </div>
 
         <div class="content has-text-centered">
