fix typos and update holodeck paper and code

--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -174,7 +174,7 @@
         <div id="post_images" class="carousel">
 
           <div class="item-1 image-caption-container">
-            <div class="caption">Three professors' office connected to a long hallway, the professor in office 1 is a fan of star wars.</div>
+            <div class="caption">Three professors' office connected to a long hallway, the professor in office 1 is a fan of Star Wars.</div>
             <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 450px;">
               <source src="./static/videos/three_professors_office_connected_to_a_long_hall_way,_the_professor_in_office_1_is_a_fan_of_star_war|0|0|sunny_vondelpark_4k|1.0|100.0|360|24.0|30|10|CYCLES_video_compressed.mp4" type="video/mp4">
             </video>
@@ -182,7 +182,7 @@
           <div class="item-2 image-caption-container">
             <div class="caption">
               <center>
-                a 1b1b apartment of a researcher<br>who has two cats
+                a 1b1b apartment of a researcher<br>who has a cat
               </center>  
             </div>
             <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 450px;">
@@ -312,7 +312,7 @@
       
     </div>
     <p class="has-text-centered">
-      <span class="dnerf">Holodeck</span> can generate diverse types of 3D environments (arcade, spa, museum), customize for styles (Victorian-style), and understand fine-grained requirements ("has a cat", "fan of Star Wars").
+      <span class="dnerf">Holodeck</span> can generate diverse types of 3D environments (arcade, spa, museum), customize for styles (victorian, bohemian), and understand fine-grained requirements ("has a cat", "fan of Star Wars").
     </p>
 </section>
 
