--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/labo.pdf"><b><span class="small-caps">Holodeck</span>: Langauge Guided Generation of 3D Embodied AI Environments</b></a>
+                  <a href="papers/holodeck.pdf"><b><span class="small-caps">Holodeck</span>: Language Guided Generation of 3D Embodied AI Environments</b></a>
                 </div>
                 <div class="authors">
                     <strong>Yue Yang</strong>, Fan-Yun Sun, Luca Weihs, Eli VanderBilt, Alvaro Herrasti, Winson Han, Jiajun Wu, Nick Haber, Ranjay Krishna, Lingjie Liu, Chris Callison-Burch, Mark Yatskar, Aniruddha Kembhavi, Christopher Clark
                 </div>
-                <!-- <div class="venue">
+                <div class="venue">
                     arxiv, 2023
-                </div> -->
+                </div>
                 <div class="tags">
-                  Coming soon...
+                  <a href="https://yueyang1996.github.io/holodeck/">website</a> /
                 </div>
                 <div align="justify">
                   TL;DR: <span class="small-caps">Holodeck</span> is an automated system for generating diverse 3D environments in Embodied AI, using a large language model (GPT-4) and a vast collection of 3D assets from Objaverse. It can create complex scenes based on user prompts, adjusting for styles and specific details, like "a 1b1b apartment of a researcher who has a cat".
