--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
             <tr>
               <td width="30%">
-                <!-- <div class="caption">
+                <div class="caption" style="font-size: 12px;">
                   <center>
                     a 1b1b apartment of a researcher who has a cat
                   </center>  
-                </div> -->
+                </div>
                 <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 220px;">
                   <source src="images/a_1b1b_apartment_of_a_researcher_who_has_a_cat_0_0_sunny_vondelpark_4k_1.0_100.0_360_16.0_30_10_CYCLES_video.mp4" type="video/mp4">
                 </video>
@@ -175,7 +175,7 @@
                     arxiv, 2023
                 </div>
                 <div class="tags">
-                  <a href="https://yueyang1996.github.io/holodeck/">website</a> /
+                  <a href="https://yueyang1996.github.io/holodeck/">website</a> / <a href="https://github.com/allenai/Holodeck">code</a>
                 </div>
                 <div align="justify">
                   TL;DR: <span class="small-caps">Holodeck</span> is an automated system for generating diverse 3D environments in Embodied AI, using a large language model (GPT-4) and a vast collection of 3D assets from Objaverse. It can create complex scenes based on user prompts, adjusting for styles and specific details, like "a 1b1b apartment of a researcher who has a cat".
