--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -532,7 +532,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
-    <pre><code>TBD</code></pre>
+    <pre><code>@misc{yang2023holodeck,
+      title={Holodeck: Language Guided Generation of 3D Embodied AI Environments}, 
+      author={Yue Yang and Fan-Yun Sun and Luca Weihs and Eli VanderBilt and Alvaro Herrasti and Winson Han and Jiajun Wu and Nick Haber and Ranjay Krishna and Lingjie Liu and Chris Callison-Burch and Mark Yatskar and Aniruddha Kembhavi and Christopher Clark},
+      year={2023},
+      eprint={2312.09067},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}</code></pre>
   </div>
 </section>
 
