update holodeck bib

--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -532,13 +532,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
-    <pre><code>@misc{yang2023holodeck,
+    <pre style="font-size: 16px;"><code>@article{yang2023holodeck,
       title={Holodeck: Language Guided Generation of 3D Embodied AI Environments}, 
       author={Yue Yang and Fan-Yun Sun and Luca Weihs and Eli VanderBilt and Alvaro Herrasti and Winson Han and Jiajun Wu and Nick Haber and Ranjay Krishna and Lingjie Liu and Chris Callison-Burch and Mark Yatskar and Aniruddha Kembhavi and Christopher Clark},
-      year={2023},
-      eprint={2312.09067},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      journal={arXiv preprint arXiv:2312.09067},
+      year={2023}
 }</code></pre>
   </div>
 </section>
