--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@
                 <tr>
                   <td width="85%">
                     <a href="https://prior.allenai.org"><b>Allen Institute for AI</b></a>, Seattle, WA, USA<br>
-                    <i>Research Intern</i> (May. 2023 to Sept. 2023)
+                    <i>Research Intern</i> (May. 2023 to Sept. 2023) <br>
+                    <b style="color: #ac530f">Outstanding Intern of the Year Award</b> <br>
                   </td>
                   <td width="15%">
                     <img src="images/ai2.png" height=50px style="display: block; margin-left: auto; margin-right: auto;">
@@ -612,7 +613,7 @@
             <tr>
               <td width="100%" valign="middle">
                 <heading>Academic Service</heading><br><br>
-                <strong>Reviewer</strong>: EMNLP 2022-2023, ACL 2023, EACL 2023-2024, CVPR 2024.
+                <strong>Reviewer</strong>: ACL, EMNLP, NAACL, EACL, CVPR.
               </td>
             </tr>
             </table>
